[package]
name = "v_agents"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v_inputs = {path="../v_inputs"}
v_transform = {path="../v_transform"}
nalgebra = "0.21.0"
specs = "0.16.1"