[package]
name = "v_inputs"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24.0"
nalgebra = "0.21.0"
specs = "0.16.1"
nalgebra-glm = "0.7.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
enum-display-derive = "0.1.0"
v_windowing = {path="../v_windowing"}