[package]
name = "v_voxels"
version = "0.1.0"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v_transform = {path="../v_transform"}
v_renderer = {path="../v_renderer"}
specs = "0.16.1"
nalgebra = "0.21.0"
v_rle = {path="../v_rle"}